--- a/aulahibernate/pom.xml
+++ b/aulahibernate/pom.xml
@@ -53,6 +53,13 @@
 			<artifactId>jsf-impl</artifactId>
 			<version>2.1.20</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.primefaces/primefaces -->
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>8.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
